# core/user/http/login.go
@@ -6,29 +6,24 @@ import (
 	"net/http"
 	"press/core/user/service"
 	"press/core/util"
-
-	"github.com/go-playground/validator"
 )
 
-type registerRequest struct {
+type loginRequest struct {
 	Email    string `json:"email" validate:"required,email"`
 	Password string `json:"password" validate:"required`
-} // @name RegisterRequest
+} // @name LoginRequest
 
-var validate *validator.Validate = validator.New()
-
-// Registers a new user with email and password
-// @Summary Registers a new user with email and password
-// @Description Registers a new user with email and password
-// @ID register-user
+// @Summary Tries to login using some credentials.
+// @Description Tries to login using some credentials.
+// @ID login
 // @Accept  json
 // @Produce  json
-// @Param body body registerRequest registerRequest "User registration parameters"
+// @Param body body loginRequest loginRequest "User login with email and password"
 // @Success 200
-// @Router /v1/auth/register [post]
-func register(userService service.Interface) http.Handler {
+// @Router /v1/auth/login [post]
+func login(userService service.Interface) http.Handler {
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		var input registerRequest
+		var input loginRequest
 		err := json.NewDecoder(r.Body).Decode(&input)
 		if err != nil {
 			util.ValidationError(w, errors.New("Invalid input"))
@@ -41,13 +36,13 @@ func register(userService service.Interface) http.Handler {
 			return
 		}
 
-		createdUser, err := userService.Register(service.RegisterParams(input))
+		loggedUser, err := userService.Login(service.LoginParams(input))
 		if err != nil {
 			util.InternalError(w, err)
 			return
 		}
 
 		w.Header().Add("content-type", "application/json")
-		json.NewEncoder(w).Encode(createdUser)
+		json.NewEncoder(w).Encode(loggedUser)
 	})
 }
