# core/user/http/router.go
@@ -8,4 +8,5 @@ import (
 
 func MakeHandlers(router *mux.Router, userService service.Interface) {
 	router.Handle("/v1/auth/register", register(userService)).Methods("POST", "OPTIONS")
+	router.Handle("/v1/auth/login", login(userService)).Methods("POST", "OPTIONS")
 }
