# docs/swagger.json
@@ -14,6 +14,34 @@
     "host": "localhost:5050",
     "basePath": "/",
     "paths": {
+        "/v1/auth/login": {
+            "post": {
+                "description": "Tries to login using some credentials.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Tries to login using some credentials.",
+                "operationId": "login",
+                "parameters": [
+                    {
+                        "description": "User login with email and password",
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/v1/auth/register": {
             "post": {
                 "description": "Registers a new user with email and password",
@@ -44,6 +72,20 @@
         }
     },
     "definitions": {
+        "LoginRequest": {
+            "type": "object",
+            "required": [
+                "email"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "RegisterRequest": {
             "type": "object",
             "required": [
